--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"bn.js": "4.11.8",
 		"chalk": "^2.4.2",
 		"concurrently": "4.1.0",
-		"dotenv": "^6.1.0",
+		"dotenv": "^6.2.0",
 		"eslint": "^5.5.0",
 		"eslint-config-prettier": "^3.6.0",
 		"eslint-config-standard": "^12.0.0",
@@ -84,13 +84,15 @@
 		"truffle": "5.1.16",
 		"typedarray-to-buffer": "^3.1.5",
 		"wait-port": "^0.2.2",
-		"web3": "1.2.6"
+		"web3": "^1.2.6"
 	},
 	"dependencies": {
 		"chainlink": "0.7.10",
 		"commander": "^2.19.0",
+		"ethereumjs-tx": "^2.1.2",
 		"openzeppelin-solidity": "2.0.0",
 		"pretty-error": "^2.1.1",
+		"truffle-hdwallet-provider": "^1.0.17",
 		"web3-utils": "1.2.2"
 	}
 }
